--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,12 +13,8 @@
 
 /* Minimal CSS Reset */
 html, body {
-    min-height: 100%;
+    /* min-height: 100%; */
     height: 100%;
-}
-
-body {
-
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
